--- a/sass/_config.sass
+++ b/sass/_config.sass
@@ -3,7 +3,7 @@ $accent: #FF144F
 
 $textColor: #1C2A37
 $lightText: #9CA7B5
-$bgColor: #333
+$bgColor: #1C2A37
 
 $fontSize: 1.6rem // Body Font Size
 $fontText: geometria, sans-serif // User Font Family
@@ -35,7 +35,7 @@ body
 	font-family: $fontText
 	font-size: $fontSize
 	color: $textColor
-	background-color: $bgColor
+	background-color: #fff
 	min-width: 32rem
 	position: relative
 
