--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ body {
   font-family: geometria, sans-serif;
   font-size: 1.6rem;
   color: #1C2A37;
-  background-color: #333;
+  background-color: #fff;
   min-width: 32rem;
   position: relative;
 }
@@ -92,7 +92,7 @@ a.btn_start, button.btn_start {
   width: 100%;
   height: 100%;
   padding: 1rem;
-  background-color: rgba(51, 51, 51, 0.8);
+  background-color: rgba(28, 42, 55, 0.5);
   position: fixed;
   top: 0;
   left: 0;
@@ -312,7 +312,7 @@ body {
   font-family: geometria, sans-serif;
   font-size: 1.6rem;
   color: #1C2A37;
-  background-color: #333;
+  background-color: #fff;
   min-width: 32rem;
   position: relative;
 }
